--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -67,5 +67,7 @@ flutter {
 dependencies {
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
     implementation 'com.android.support:multidex:2.0.1'
+    implementation 'com.google.firebase:firebase-analytics-ktx'
+    implementation platform('com.google.firebase:firebase-bom:29.0.3')
 }
 apply plugin: 'com.google.gms.google-services'
