--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,19 +28,17 @@ environment:
 # versions available, run `flutter pub outdated`.
 dependencies:
   cloud_firestore: ^3.1.4
-  firebase_core: ^1.10.6
-  firebase_auth: ^3.3.4
-  firebase_storage: ^10.2.4
-
-
   cupertino_icons: ^1.0.2
+  file_picker: ^4.3.1
+  firebase_auth: ^3.3.4
+  firebase_core: ^1.10.6
+  firebase_storage: ^10.2.4
   flutter:
     sdk: flutter
   flutter_svg: ^1.0.0
-  google_fonts: ^2.1.0
   get_storage: ^2.0.3
+  google_fonts: ^2.1.0
   provider: ^6.0.2
-
 
 dev_dependencies:
   flutter_lints: ^1.0.0
