--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,7 @@ dependencies:
   firebase_storage: ^10.2.4
   flutter:
     sdk: flutter
+  flutter_launcher_icons: ^0.9.2
   flutter_svg: ^1.0.0
   get_storage: ^2.0.3
   google_fonts: ^2.1.0
@@ -44,7 +45,10 @@ dev_dependencies:
   flutter_lints: ^1.0.0
   flutter_test:
     sdk: flutter
-
+flutter_icons:
+  image_path: "assets/Drawables/ICON.png"
+  android: true
+  ios: true
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
 # The following section is specific to Flutter.
